# lesson_27

./: .gitignore  README.md  csv_to_json_decoder.py  pyproject.toml
ads/: admin.py  models.py  views.py
ads/migrations/: 0001_initial.py
homework_27/: settings.py  urls.py
